[package]
name = "db-tx"
version = "0.1.0"
authors = ["dimmy82 <chengdimmy82@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = ["diesel"]
diesel = []
sqlx = []

[dependencies]
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
